Adding owner to jobInfo
Added job owner to Job Ino in producer API.

Uplift submodule with  policymanagement source from ONAP. This means that GET component configuration is included.

Issue-ID: NONRTRIC-173
